--- a/17022021/index.html
+++ b/17022021/index.html
@@ -19,7 +19,7 @@
   <meta name="msapplication-config" content="https://happybirthdayshowhelsinki.github.io/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Sendung am 05.08.2020 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+  <title>Sendung am 17.02.2021 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
   <link rel="stylesheet" href="/styles/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/stylesheet.css">
@@ -29,17 +29,12 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-    <h2>Sendung am 05.08.2020</h2>
-    <div class="col-md-6">
-      <iframe src="https://cba.fro.at/461861/embed?&waveform=false" width="100%" height="99"
-        style="border:none; width:100%; height:99px;"></iframe>
-    </div>
-    <p><a href="https://helsinki.at/program/98258" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
-    </p>
-    <p><a href="https://cba.fro.at/461861" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
-    <p>Heute feiern wir mit Helene Fischer, Carlos Vives, Shawn Mendes und Geri Halliwell von den Spice Girls. Am 1.
-      August war der Nationalfeiertag der Schweiz, weil die Schweiz am 1. August 1291 gegründet wurde. Außerdem hat Neil
-      Armstrong, der erste Mensch auf dem Mond, heute Geburtstag.</p>
+    <h2>Sendung am 17.02.2021</h2>
+    <p>Sie können diese Sendung am 17.02.2021 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
+        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <!-- <p><a href="https://helsinki.at/program/98261" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
+    </p> -->
+    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
