--- a/standard.html
+++ b/standard.html
@@ -19,10 +19,10 @@
             <div class="dropdown">
               <button onclick="myFunction()" class="dropbtn">Kommende Sendungen</button>
               <div id="myDropdown" class="dropdown-content">
-                <a href="https://happybirthdayshowhelsinki.github.io/09062021"><del style="color: #dc3545;">09.06.2021</del> <span class="badge badge-danger">!</span></a>
                 <a href="https://happybirthdayshowhelsinki.github.io/07072021">07.07.2021</a>
                 <a href="https://happybirthdayshowhelsinki.github.io/04082021">04.08.2021</a>
                 <a href="https://happybirthdayshowhelsinki.github.io/01092021">01.09.2021</a>
+                <a href="https://happybirthdayshowhelsinki.github.io/29092021">29.09.2021</a>
               </div>
             </div>
           </div>
