--- a/04082021/index.html
+++ b/04082021/index.html
@@ -34,7 +34,9 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/105031" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Michael Jackson, Madonna, Cesár Sampson und Dua Lipa. Die erste Zahnradbahn der Welt nahm in England am 12. August
+      1812 den Betrieb auf. Außerdem hat der Schweizer Tennisspieler Roger Federer am 8. August Geburtstag. Er war bisher 310 Wochen, also fast
+      6 Jahre, auf Platz 1 der Tennis-Weltrangliste.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
