--- a/22122021/index.html
+++ b/22122021/index.html
@@ -19,7 +19,7 @@
   <meta name="msapplication-config" content="https://happybirthdayshowhelsinki.github.io/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Sendung am 12.05.2021 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+  <title>Sendung am 22.12.2021 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
   <link rel="stylesheet" href="/styles/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/stylesheet.css">
@@ -29,16 +29,12 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-    <h2><span class="wiederholung-2">Sendung am 12.05.2021 um 18:00 Uhr</span><span class="wiederholung-1">WH am 26.05. um 01:00 Uhr</span></h2>
-    <div class="col-md-6">
-      <iframe src="https://cba.fro.at/499872/embed?&waveform=false" width="100%" height="99"
-        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
-    </div>
-    <p><a href="https://helsinki.at/program/105028" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
+    <h2><span class="wiederholung-2">Sendung am 22.12.2021 um 18:00 Uhr</span><span class="wiederholung-1">WH am 05.01. um 01:00 Uhr</span></h2>
+    <p>Sie können diese Sendung am 22.12.2021 von 18 bis 19 Uhr, sowie am 05.01.2022 von 1 bis 2 Uhr, in Graz auf der Frequenz 92,6 oder im <a
+        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <p><a href="https://helsinki.at/program/105036" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p><a href="https://cba.fro.at/499872" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
-    <p>Heute feiern wir mit Marie Fredriksson von Roxette, Rea Garvey, Olly Murs und Cher. Morgen ist internationaler Hummus Tag. Der Schauspieler Clint Eastwood hat am 31. Mai Geburtstag.</p>
-    <p>Ab heute werden übrigens nicht nur MusikerInnen vorgestellt, die um den Sendetag herum Geburtstag haben, sondern generell im Sendemonat.</p>
+    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
