--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,9 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/01092021">01.09.2021</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/04082021">04.08.2021</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/07072021">07.07.2021</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/12052021">12.05.2021</a></p>
+        <p><span class="datum">12.05.2021 - WH 26.05.2021:</span><br>Mit Marie Fredriksson, Rea Garvey, Olly Murs
+                und Cher<br><a href="https://helsinki.at/program/105028" target="_blank">Programmhinweis auf der
+                Radio Helsinki Homepage</a><br><a href="https://cba.fro.at/499872" target="_blank">Sendung zum Nachhören
+                auf der CBA-Plattform</a></p>
         <p><span class="datum">14.04.2021 - WH 28.04.2021:</span><br>Mit Luis Fonsi, Freya Ridings, Brendon Urie und Amy Diamond<br><a
                 href="https://helsinki.at/program/105027" target="_blank">Programmhinweis auf der Radio Helsinki
                 Homepage</a><br><a href="https://cba.fro.at/496289" target="_blank">Sendung zum Nachhören auf der
