--- a/29092021/index.html
+++ b/29092021/index.html
@@ -34,7 +34,8 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/105033" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Jason Derulo, Anastacia, Lemo und Katie Melua. Am 21. September war der Nationalfeiertag von Malta. Außerdem hatte 
+      der Schauspieler Henning Baum am 20. September Geburtstag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
