--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,9 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/27102021">27.10.2021</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/29092021">29.09.2021</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/01092021">01.09.2021</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/04082021">04.08.2021</a></p>
+        <p><span class="datum">04.08.2021 - WH 18.08.2021:</span><br>Mit Michael Jackson, Madonna, Cesár Sampson
+            und Dua Lipa<br><a href="https://helsinki.at/program/105031" target="_blank">Programmhinweis auf der
+                Radio Helsinki Homepage</a><br><a href="https://cba.fro.at/512881" target="_blank">Sendung zum Nachhören
+                auf der CBA-Plattform</a></p>
         <p><span class="datum">07.07.2021 - WH 21.07.2021:</span><br>Mit Selena Gomez, Jason Wade, Hugo Helmig und
             Stefanie Werger<br><a href="https://helsinki.at/program/105030" target="_blank">Programmhinweis auf der
                 Radio Helsinki Homepage</a><br><a href="https://cba.fro.at/508047" target="_blank">Sendung zum Nachhören
