--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
     <div class="announcement-1 alert alert-success">
       <h2 class="announcement-font">Jubiläumsausgabe: 24.11.2021 18:00 Uhr</h2>
     </div>
-    <h3 class="announcement-2 announcement-font">Die Happy Birthday Show wird zwei Jahre alt!</h3>
+    <iframe src="https://cba.fro.at/529300/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:79px; margin-bottom: 10px; margin-top: 15px;"></iframe>
+    <h3 class="announcement-2 announcement-font" style="padding-top: 0;">Die Happy Birthday Show wird zwei Jahre alt!</h3>
     <p>Und wenn eine Geburtstags-Sendung Geburtstag hat, dann wird das gefeiert. Deshalb gibt es am 24. November eine
       Jubiläumsausgabe, in der wir neben Musik von MusikerInnen die im November Geburtstag haben auch die drei
       bekanntesten Hits aus dem letzten Jahr hören werden. Außerdem gibt es ein paar Hintergrundinformationen zur Happy
