--- a/22122021/index.html
+++ b/22122021/index.html
@@ -34,7 +34,8 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/105036" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Taylor Swift, Chris Steger, Michael Patrick Kelly and Zara Larsson. Am 3. Dezember 1992 wurde die weltweit erste
+      SMS versendet. Außerdem hat der russische Maler Wassily Kandinsky am 16. Dezember Geburtstag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
