--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,9 +30,12 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/22122021">22.12.2021</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/24112021">24.11.2021</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/27102021">27.10.2021</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/29092021">29.09.2021</a></p>
+        <p><span class="datum">29.09.2021 - WH 13.10.2021:</span><br>Mit Jason Derulo, Anastacia, Lemo und Katie Melua<br><a
+                href="https://helsinki.at/program/105033" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
+                <br><a href="https://cba.fro.at/519803" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
         <p><span class="datum">01.09.2021 - WH 15.09.2021:</span><br>Mit Morten Harket, Alice Merton, Kygo und Amy
             Winehouse<br><a href="https://helsinki.at/program/105032" target="_blank">Programmhinweis auf der Radio
                 Helsinki Homepage</a><br><a href="https://cba.fro.at/515826" target="_blank">Sendung zum Nachhören auf
