--- a/16032022/index.html
+++ b/16032022/index.html
@@ -32,8 +32,8 @@
     <h2><span class="wiederholung-2">Sendung am 16.03.2022 um 18:00 Uhr</span><span class="wiederholung-1">WH am 30.03. um 01:00 Uhr</span></h2>
     <p>Sie können diese Sendung am 16.03.2022 von 18 bis 19 Uhr, sowie am 30.03.2022 von 1 bis 2 Uhr, in Graz auf der Frequenz 92,6 oder im <a
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
-    <!-- <p><a href="https://helsinki.at/program/105035" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
-    </p> -->
+    <p><a href="https://helsinki.at/program/111000" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
+    </p>
     <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
   </div>
 
