--- a/19012022/index.html
+++ b/19012022/index.html
@@ -34,7 +34,8 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/110998" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Alvaro Soler, Mark Forster, Lisa Pac und Jani Joplin. Der Physiker Stephen Hawking hatte am 8. Jänner Geburtstag.
+      Außerdem ist heute am 19. Jänner Tag des Popcorns.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
