--- a/08062022/index.html
+++ b/08062022/index.html
@@ -5,8 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-
   <link rel="apple-touch-icon" sizes="180x180"
     href="https://happybirthdayshowhelsinki.github.io/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32"
@@ -21,7 +19,7 @@
   <meta name="msapplication-config" content="https://happybirthdayshowhelsinki.github.io/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 
-  <title>Jubiläumsausgabe am 24.11.2021 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+  <title>Sendung am 08.06.2022 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
   <link rel="stylesheet" href="/styles/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles/stylesheet.css">
@@ -31,23 +29,12 @@
   <div class="content">
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
-    <div class="announcement-1 alert alert-success" style="margin-top: 0;">
-      <h2 class="announcement-font">Jubiläumsausgabe: 24.11.2021 18:00 Uhr</h2>
-    </div>
-    <div style="text-align: center; margin-top: 15px; margin-bottom: 15px;"><span class="alert alert-success"
-        style="border: none; border-radius: 20px; font-size: 20px; display: inline; padding: 5px;">WH am 08.12. um 01:00
-        Uhr</span></div>
-    <iframe src="https://cba.fro.at/529300/embed?&waveform=false" width="100%" height="99"
-      style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
-    <h3 class="announcement-2 announcement-font" style="padding-top: 0;">Die Happy Birthday Show wird zwei Jahre alt!
-    </h3>
-    <p>Und wenn eine Geburtstags-Sendung Geburtstag hat, dann wird das gefeiert. Deshalb gibt es am 24. November eine
-      Jubiläumsausgabe, in der wir gemeinsam mit Tina Turner, Tom Gregory und Miley Cyrus feiern. Neben Musik von
-      diesen MusikerInnen hören wir auch die drei bekanntesten Hits aus dem letzten Jahr. Außerdem gibt es ein paar
-      Hintergrundinformationen zur Happy Birthday Show. Beginnen werden wir die Jubiläumsausgabe mit der ersten
-      Moderation der ersten Happy Birthday Show vom 1. Dezember 2019 und dem ersten Lied: Mat Kearney - Coming Home.</p>
-    <p><a href="https://helsinki.at/program/105035" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
-    <p><a href="https://cba.fro.at/529300" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
+    <h2><span class="wiederholung-2">Sendung am 08.06.2022 um 18:00 Uhr</span><span class="wiederholung-1">WH am 22.06. um 01:00 Uhr</span></h2>
+    <p>Sie können diese Sendung am 08.06.2022 von 18 bis 19 Uhr, sowie am 22.06.2022 von 1 bis 2 Uhr, in Graz auf der Frequenz 92,6 oder im <a
+        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <p><a href="https://helsinki.at/program/111003" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
+    </p>
+    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
