--- a/16022022/index.html
+++ b/16022022/index.html
@@ -30,10 +30,13 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2><span class="wiederholung-2">Sendung am 16.02.2022 um 18:00 Uhr</span><span class="wiederholung-1">WH am 02.03. um 01:00 Uhr</span></h2>
-    <p>Sie können diese Sendung am 16.02.2022 von 18 bis 19 Uhr, sowie am 02.03.2022 von 1 bis 2 Uhr, in Graz auf der Frequenz 92,6 oder im <a
-        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/542567/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/110999" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/542567" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Heute feiern wir mit Shakira, Daddy Yankee, Rainhard Fendrich und Nina Simone. Am 6. Februar war der Nationalfeiertag von Neuseeland, er
       wird auch als „Waitangi Day“ bezeichnet. Außerdem war am 14. Februar Tag des Riesenrads.</p>
   </div>
