--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,9 +30,12 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/16022022">16.02.2022</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/19012022">19.01.2022</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/22122021">22.12.2021</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/24112021">24.11.2021</a></p>
+        <p><span class="datum">24.11.2021 - WH 08.12.2021:</span><br>Jubiläumsausgabe: Mit Tina Turner, Tom Gregory und Miley Cyrus<br>
+            <a href="https://helsinki.at/program/105035" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
+            href="https://cba.fro.at/529300" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
         <p><span class="datum">27.10.2021 - WH 10.11.2021:</span><br>Mit John Lennon, Jess Glynne, Bruno Mars und Dannii
             Minogue<br><a href="https://helsinki.at/program/105034" target="_blank">Programmhinweis auf der Radio Helsinki
                 Homepage</a><br><a href="https://cba.fro.at/524717" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
